[gd_scene load_steps=12 format=3 uid="uid://wyi1hsgsgjuk"]

[ext_resource type="Script" uid="uid://cuq2x3t226eld" path="res://scripts/tela_jogo_scripts/pantanal.gd" id="1_kwkci"]
[ext_resource type="PackedScene" uid="uid://bwdlfrvjkrqns" path="res://scenes/level_missions.tscn" id="1_ul2oa"]
[ext_resource type="PackedScene" uid="uid://cm587ad2cgh8y" path="res://dialog_scenes/level_tuiuiu.tscn" id="2_fwskf"]
[ext_resource type="Script" uid="uid://t13aiph8r3xx" path="res://scripts/Mission.gd" id="2_kwkci"]
[ext_resource type="Resource" uid="uid://bij7pa4xwgrwm" path="res://Resources/missoes_pantanal/areas_alagadas.tres" id="3_fwskf"]
[ext_resource type="Resource" uid="uid://b53px5tl6rot" path="res://Resources/missoes_pantanal/arvores_altas.tres" id="4_c8ygg"]
[ext_resource type="Resource" uid="uid://bjhg4o03863fb" path="res://Resources/missoes_pantanal/riqueza_aquatica.tres" id="5_ixcs8"]
[ext_resource type="PackedScene" uid="uid://dqu0j2hrsrtt2" path="res://scenes/progressbar_missoes.tscn" id="6_l57cr"]
[ext_resource type="PackedScene" uid="uid://2ubsbgso1mxg" path="res://scenes/core_gameplay/game_main.tscn" id="7_a5n3p"]

[sub_resource type="Gradient" id="Gradient_fwskf"]
colors = PackedColorArray(0.000235263, 0.199265, 0.660163, 1, 0.192884, 0.538019, 0.951966, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c8ygg"]
gradient = SubResource("Gradient_fwskf")
fill_to = Vector2(1, 1)

[node name="Pantanal" type="Node2D"]
script = ExtResource("1_kwkci")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -34429.0
offset_top = -22846.0
offset_right = 30912.0
offset_bottom = 27554.0
texture = SubResource("GradientTexture2D_c8ygg")

[node name="Level_tuiuiu" parent="." instance=ExtResource("2_fwskf")]

[node name="LevelMissions" parent="." instance=ExtResource("1_ul2oa")]
missions = Array[ExtResource("2_kwkci")]([ExtResource("3_fwskf"), ExtResource("4_c8ygg"), ExtResource("5_ixcs8")])

[node name="progressbar_missoes" parent="." instance=ExtResource("6_l57cr")]

[node name="GameMain" parent="." instance=ExtResource("7_a5n3p")]
